# VocalAssist

./: .gitignore  .secretsignore  CHANGELOG.md  Dockerfile.backend  GETTING_STARTED.md  INTERNET_SEARCH_VALIDATION.md  MACRO-002_COMPLETE.md  MACRO-003_COMPLETE.md  MACRO-004_COMPLETE.md  MACRO-005_COMPLETE.md  MVP_VALIDATION_FINAL.md  OPEN_SOURCE_CONSTRAINT_IMPLEMENTATION.md  README.md  SESSION_SUMMARY.md  STM32_MACROS_DECOMPOSITION.md  STM32_MACROS_ROADMAP.md  WORKFLOW.md  copilot-instructions.md  docker-compose.yml  main.py  validate_mvp.py
.github/workflows/: pylint.yml
data/: simulation_scenarios.json  voice_latency_samples.latest.json
doc/: edge-field-test-matrix.md  edge-reconnect-degraded-mode.md  waveshare-esp32-s3-touch-lcd-1.85c.md
doc/tickets/: 0303-[STM32]_MACRO-014:_Format_d_Echange_Unifie_Firmware-Assistant.md  0304-[STM32]_MACRO-015:_Adoption_du_Format_Unifie_cote_Assistant.md
docs/: EDGE-NETWORK-VALIDATION.md  MVP_STATUS.md  README.md  SECURITY_AND_SECRETS.md  SESSION_CYCLE.md  USING_EPICS.md  architecture-edge-serveur.md  bonnes-pratiques-codage.md  comparatif-assistants-vocaux.md  decision-materiel-edge-v1.md  plan-execution-2-semaines.md  roadmap-leon-assistant-vocal.md  roadmap.md  runbook-docker-compose.md  specification-projet-complete.md
docs/01-vision/: product-decisions.md  product-definition.md
docs/02-architecture/: interfaces-and-contracts.md  system-architecture.md
docs/03-delivery/: roadmap.md  sprint-2-weeks.md  voice-latency-benchmark-latest.md
docs/04-engineering/: coding-guidelines.md  testing-and-kpi.md  testing-base-firmware.md
docs/05-research/: assistant-benchmark.md
docs/99-legacy/: README.md
docs/bonnes-pratiques/: 01-principes-generaux.md  02-tests-et-documentation.md  03-securite-et-git.md  04-conventions-python.md  05-definition-of-done.md
scripts/: README.md  audit-secrets.py  benchmark_voice_latency.py  gh-auth-secure.sh  home_assistant_mock_server.py  install-hooks.sh  leon_mock_server.py  make-tickets-from-epics.py  publish_backlog_to_github.py  run_base_testbench.py  smoke-test.sh  sync.sh  sync_tickets.py  validate_ticket.py
src/assistant/: __init__.py  audio_capture.py  base_testbench.py  clarification.py  context_manager.py  date_parser.py  define.py  edge_audio.py  edge_backend.py  edge_device.py  intent_configs.py  intents.py  intents_v2.py  (+18 more)
src/base/firmware/stm32/: CMakeLists.txt
src/base/firmware/stm32-rust/: Cargo.toml
src/base/firmware/stm32-rust/.cargo/: config.toml
src/base/firmware/stm32-rust/examples/: edge_client.rs  main.rs
src/base/firmware/stm32-rust/src/: lib.rs
src/base/firmware/stm32-rust/src/hal/: battery.rs  button.rs  display.rs  exchange.rs  led.rs  microphone.rs  mod.rs  playback.rs  rtc.rs  storage.rs  touch.rs
src/base/firmware/stm32-rust/tests/: integration_tests.rs
src/base/firmware/stm32/cmake/: toolchain-stm32-gcc.cmake
src/base/firmware/stm32/include/: base_runtime.h
src/base/firmware/stm32/src/: base_runtime.c  main_example.c
tests/: test_audio_capture.py  test_base_peripherals.py  test_base_runtime.py  test_base_test_harness.py  test_base_testbench_mode.py  test_context_manager.py  test_date_parser.py  test_edge_audio.py  test_edge_device.py  test_intent_configs.py  test_intents.py  test_intents_v2.py  test_leon_client.py  test_leon_router.py  test_local_storage.py  test_macro_002_t4.py  test_main_modes.py  test_new_intents.py  test_observability.py  test_orchestrator.py  test_prototype_edge.py  test_providers.py  test_resilience.py  test_retention_policy.py  test_session_manager.py  test_simulation.py  test_slot_extraction.py  test_sync_tickets.py  test_validate_ticket.py  test_voice_latency.py  test_voice_pipeline.py  test_voice_slo.py  test_voice_stt.py  test_voice_tts.py  test_wake_word_handler.py
(+23 files in other folders)
